configura package.js

--- a/package.json
+++ b/package.json
@@ -1,5 +1,8 @@
 {
   "name": "proyecto_fablab_api",
+  "engines": {
+    "node": "14.17.3"
+  },
   "version": "0.0.0",
   "private": true,
   "scripts": {
