--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "postinstall": "knex migrate:latest:"
+    "postinstall": "knex migrate:latest"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
